--- a/example-site/index.html
+++ b/example-site/index.html
@@ -10,5 +10,7 @@
     <h1>Olá Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus at eligendi sint, dolores voluptas recusandae tempore obcaecati ducimus a nobis, facilis, necessitatibus id. Hic, exercitationem! Sequi impedit architecto corporis dignissimos.</p>
+    <h2> Segundo parágrafo</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus sapiente, asperiores unde eaque laudantium harum maxime ut soluta vero temporibus, impedit aut reprehenderit earum pariatur sit tempora perferendis in aliquid?</p>
 </body>
 </html>
